--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@vitejs/plugin-react": "^3.1.0",
