--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
