--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "daisyui": "^2.50.2",
+    "lodash.debounce": "^4.0.8",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-beautiful-dnd": "^13.1.3",
