--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.3",
     "daisyui": "^2.50.2",
     "lodash.debounce": "^4.0.8",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.14.0",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.27",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.10",
