--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "^1.10.0",
+    "uuid": "^9.0.0",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/react": "^18.0.27",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
